# macro-morph-fx

./: .gitignore  CMakeLists.txt  README.md
Source/: MacroEngine.h  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetData.h  SceneData.h
Source/DSP/: DelayModule.h  DriveModule.h  FilterModule.h  ReverbModule.h
docs/: DECISIONS.md  SPEC.md  STATE.md  WORKFLOW.md
